--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -117,6 +117,9 @@
 		<div id="timeline">
 			{% include page_template %}
 		</div>
+		<a class="btn-floating btn-large waves-effect waves-light red" href="{% url 'course:create' %}">
+			<i class="fa fa-plus" aria-hidden="true"></i>
+		</a>
 	{% else %}
 		<ul class="timeline" style="-webkit-padding-start: 0px">
 			<div id="timeline">
