--- a/app/templates/home_professor.html
+++ b/app/templates/home_professor.html
@@ -30,6 +30,7 @@
 {% endblock %}
 
 {% block content %}
+
     <h3>{% trans 'Courses' %}</h3>
   	{% if courses|length > 0 %}
   		{% for course in courses %}
@@ -54,7 +55,23 @@
 {% endblock %}
 
 {% block rightbar %}
-	<div class="well well-lg goal">
-        {% trans 'Goals' %}
+    <div class="col-md-12">
+          <div><div class="panel panel-warning">
+    <div class="panel-heading">
+        <h3 class="panel-title">{% trans 'Pending Stuffs' %}</h3>
     </div>
+    <div class="panel-body">
+
+    </div>
+</div></div>
+          <div><div class="panel panel-warning">
+    <div class="panel-heading">
+        <h3 class="panel-title">{% trans 'Goals' %}</h3>
+    </div>
+    <div class="panel-body">
+
+    </div>
+</div></div>
+        </div>
+	
 {% endblock rightbar %}
