--- a/core/static/materialize/css/materialize.css
+++ b/core/static/materialize/css/materialize.css
@@ -1,91 +1,31 @@
-.z-depth-1, nav, .card-panel, .card, .toast, .btn, .btn-large, .btn-floating, .dropdown-content, .collapsible, .side-nav {
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-}
 
-.z-depth-1-half, .btn:hover, .btn-large:hover, .btn-floating:hover {
-  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
-}
-nav ul a.btn, nav ul a.btn-large, nav ul a.btn-large, nav ul a.btn-flat, nav ul a.btn-floating {
-  margin-top: -2px;
-  margin-left: 15px;
-  margin-right: 15px;
-}
-.card .card-action a:not(.btn):not(.btn-large):not(.btn-floating) {
-  color: #ffab40;
-  margin-right: 20px;
-  transition: color .3s ease;
-  text-transform: uppercase;
-}
-
-.card .card-action a:not(.btn):not(.btn-large):not(.btn-floating):hover {
-  color: #ffd8a6;
-}
-
-.card .card-reveal {
-  padding: 20px;
-  position: absolute;
-  background-color: #fff;
-  width: 100%;
-  overflow-y: auto;
-  top: 100%;
-  height: 100%;
-  z-index: 3;
-  display: none;
-}
-
-.btn.disabled, .disabled.btn-large,
 .btn-floating.disabled,
-.btn-large.disabled,
-.btn:disabled,
-.btn-large:disabled,
-.btn-large:disabled,
-.btn-floating:disabled,
-.btn[disabled],
-[disabled].btn-large,
-.btn-large[disabled],
-.btn-floating[disabled] {
+ {
   background-color: #DFDFDF !important;
   box-shadow: none;
   color: #9F9F9F !important;
   cursor: default;
 }
 
-.btn.disabled *, .disabled.btn-large *,
 .btn-floating.disabled *,
-.btn-large.disabled *,
-.btn:disabled *, .btn-large:disabled *,
-.btn-large:disabled *,
 .btn-floating:disabled *,
-.btn[disabled] *, [disabled].btn-large *,
-.btn-large[disabled] *,
 .btn-floating[disabled] * {
   pointer-events: none;
 }
 
-.btn.disabled:hover, .disabled.btn-large:hover,
 .btn-floating.disabled:hover,
-.btn-large.disabled:hover,
-.btn:disabled:hover,
-.btn-large:disabled:hover,
-.btn-large:disabled:hover,
 .btn-floating:disabled:hover,
-.btn[disabled]:hover,
-[disabled].btn-large:hover,
-.btn-large[disabled]:hover,
 .btn-floating[disabled]:hover {
   background-color: #DFDFDF !important;
   color: #9F9F9F !important;
 }
 
-.btn i, .btn-large i,
-.btn-floating i,
-.btn-large i,
-.btn-flat i {
+.btn-floating i{
   font-size: 1.3rem;
   line-height: inherit;
 }
 
-.btn, .btn-large {
+/*.btn, .btn-large {
   text-decoration: none;
   color: #fff;
   background-color: #26a69a;
@@ -93,11 +33,7 @@ nav ul a.btn, nav ul a.btn-large, nav ul a.btn-large, nav ul a.btn-flat, nav ul 
   letter-spacing: .5px;
   transition: .2s ease-out;
   cursor: pointer;
-}
-
-.btn:hover, .btn-large:hover {
-  background-color: #2bbbad;
-}
+}*/
 
 .btn-floating {
   display: inline-block;
@@ -151,22 +87,4 @@ button.btn-floating {
 .fixed-action-btn ul a.btn-floating {
   opacity: 0;
 }
-.side-nav a.btn, .side-nav a.btn-large, .side-nav a.btn-large, .side-nav a.btn-flat, .side-nav a.btn-floating {
-  margin: 10px 15px;
-}
 
-.side-nav a.btn, .side-nav a.btn-large, .side-nav a.btn-large, .side-nav a.btn-floating {
-  color: #fff;
-}
-
-.side-nav a.btn-flat {
-  color: #343434;
-}
-
-.side-nav a.btn:hover, .side-nav a.btn-large:hover, .side-nav a.btn-large:hover {
-  background-color: #2bbbad;
-}
-
-.side-nav a.btn-floating:hover {
-  background-color: #26a69a;
-}
