--- a/forum/templates/post/post_list.html
+++ b/forum/templates/post/post_list.html
@@ -2,12 +2,15 @@
 
 {% if posts|length > 0 %}
     {% for post in posts %}
-        <div class="row">
-            <div class="col-sm-12 col-xs-12">
+        <div  class="row">
+            <div id="post_{{ post.id }}" class="col-sm-12 col-xs-12">
                 <h3 class="user-name">
                     {{ post.user }}
-                    {% if request.user|has_role:'system_admin' or request.user|has_role:'professor' and request.user == post.user %}
-                        <div class="pull-right">
+                    <div class="pull-right">
+                        <a href="javascript:answer('{{ post.id }}', '{% url 'forum:reply_post' %}');">
+                            <i class="material-icons">reply</i>
+                        </a>
+                        {% if request.user|has_role:'system_admin' or request.user|has_role:'professor' and request.user == post.user %}
                             <div class="btn-group icon-more-horiz">
                                 <a class="btn btn-default btn-xs dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     <i class="material-icons">more_horiz</i>
@@ -17,13 +20,14 @@
                                     <li><a href="javascript:void(0)"><i class="material-icons">delete_sweep</i> {% trans 'Remove' %}</a></li>
                                 </ul>
                             </div>
-                        </div>
-                    {% endif %}
+                        {% endif %}
+                    </div>
                 </h3>
                 <div class="card-data">
                     <p class="comment-date"><i class="fa fa-clock-o"></i> {{ post.post_date }}</p>
                 </div>
                 <p class="comment-text">{{ post.message|linebreaks }}</p>
+                <div class="answer_post"></div>
             </div>
         </div>
         {% list_post_answer request post %}
