--- a/users/templates/users/create.html
+++ b/users/templates/users/create.html
@@ -60,8 +60,8 @@
 								{% render_field field class='form-control' %}
 							{% endif %}
               				<span id="helpBlock" class="help-block">{{ field.help_text }}</span>
-							{% if field.errors.length > 0 %}
-								<div class="alert alert-danger alert-dismissible" role="alert">
+							{% if field.errors %}
+								<div class="alert alert-danger alert-dismissible col-md-offset-4 col-md-8" role="alert">
 				  					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
 				  						<span aria-hidden="true">&times;</span>
 			  						</button>
