--- a/forum/templates/post_answers/post_answer_form.html
+++ b/forum/templates/post_answers/post_answer_form.html
@@ -25,7 +25,7 @@
 					</div>
 				{% endif %}
 				<span class="input-group-btn">
-			        <button type="button" class="btn btn-fab btn-fab-mini">
+			        <button type="submit" class="btn btn-fab btn-fab-mini">
 			            <i class="material-icons">send</i>
 			        </button>
 			    </span>
