--- a/subjects/templates/subjects/initial.html
+++ b/subjects/templates/subjects/initial.html
@@ -7,8 +7,8 @@
 	<div id="" class="col-md-12">
 		<div class="users-cloud">
 			<ul class=" users-cloud">
-				{% for user in users %}
-					<li>{{user.social_name}}</li>
+				{% for marker in markers %}
+					<li>{{marker.name}}</li>
 				{% endfor %}
 			</ul>
 		</div>
