--- a/subjects/templates/subjects/subject_card.html
+++ b/subjects/templates/subjects/subject_card.html
@@ -53,7 +53,7 @@
 
         <p>{{subject.description_brief|safe}}</p>
                       
-        {% if request.user in subject.students.all or request.user in subject.professor.all or quest.user.is_staff or request.user in category.coordinators.all %}
+        {% if request.user in subject.students.all or request.user in subject.professor.all or request.user.is_staff or request.user in category.coordinators.all %}
             <a href="#"><button class="access-subject"> {% trans "Access Subject" %}</button></a>
         {% else %}
             <a href="#"><button class="subscribe-subject"> {% trans "Subscribe to Subject" %}</button></a>
@@ -114,7 +114,7 @@
 
         <p>{{subject.description_brief|safe}}</p>
                       
-        {% if request.user in subject.students.all or request.user in subject.professor.all or quest.user.is_staff or request.user in category.coordinators.all  %}
+        {% if request.user in subject.students.all or request.user in subject.professor.all or request.user.is_staff or request.user in category.coordinators.all   %}
             <a href="#"><button class="access-subject"> {% trans "Access Subject" %}</button></a>
         {% else %}
             <a href="#"><button class="subscribe-subject"> {% trans "Subscribe to Subject" %}</button></a>
